--- a/args.yaml
+++ b/args.yaml
@@ -6,7 +6,12 @@ fmin: 20
 fmax: 18000
 pad_to: 64
 
-classes: ['Детский крик', 'Детский смех', 'Детский плач', 'Детское пение']
+
+classes_1: ['Отсутствие голоса', 'Наличие голоса']
+classes_2: ['Отсутствие звуков детей', 'Наличие звуков детей']
+classes_3: ['Отсутствие плача ребенка', 'Наличие плача ребенка']
+classes_4: ['Детский крик', 'Детский смех', 'Детский плач', 'Детское пение']
+classes_5: ['Плач по другой причине', 'Плач по причине боли']
 threshold: 0.5
 
 device: 0
